Begin to add more stuff

--- a/docs/docs/libraries/static-server-rdil.mdx
+++ b/docs/docs/libraries/static-server-rdil.mdx
@@ -22,7 +22,7 @@ static server has many features, including (but not limited to):
 
 ## Installation
 
-<span class="badge badge--success">npm Package</span> <a href="https://npmjs.com/package/static-server-rdil" target="_blank" rel="noopener noreferrer">static-server-rdil</a>
+<span className="badge badge--success">npm Package</span> <a href="https://npmjs.com/package/static-server-rdil" target="_blank" rel="noopener noreferrer">static-server-rdil</a>
 
 Run this in a terminal:
 
